--- a/ansible_setup/ansible.cfg
+++ b/ansible_setup/ansible.cfg
@@ -4,4 +4,4 @@ remote_user = root
 deprecation_warnings=False
 
 #add public ssh key directory and filename as private_key_file value
-ansible_ssh_private_key_file = "~/.ssh/id_rsa.pub"
+ansible_ssh_private_key_file = ""
