adding local_setup.yml playbook

--- a/ansible_setup/inventory.yml
+++ b/ansible_setup/inventory.yml
@@ -1,4 +1,3 @@
 [hosts]
-#add HPVS public IP below this comment - or leave as 'localhost' to run locally
-#localhost ansible_connection=local
-169.63.212.70
+# if running locally local_setup.yml is already pointed towards 'localhost' and no change needs to be made
+#add HPVS public IP below this comment
