--- a/ansible_setup/hpvs_setup.yml
+++ b/ansible_setup/hpvs_setup.yml
@@ -33,17 +33,24 @@
 
     - name: Run 'generate_certs' script for SSL certificates
       shell: "bash ~/HyperProtectBackendSDK-test/generate_certs.sh {{ inventory_hostname }}"
+      ignore_errors: true
 
-    - pause: seconds=60
+    - pause: seconds=30
 
-    - name: Copy rootCA.crt to local machine for validation test with curl/browser
-      fetch:
-        src: ~/HyperProtectBackendSDK-test/certs/rootCA.crt
-        dest: "{{ playbook_dir }}/"
-        mode: 0774
-        flat: yes
 
     - name: Running setup via docker-compose.yml
       docker_compose:
           project_src: /root/HyperProtectBackendSDK-test
 #          project_src: /root/HyperProtectBackendSDK
+
+    - pause: seconds=20
+
+    - name:
+      shell: "bash ~/HyperProtectBackendSDK-test/copy_cert.sh"
+
+    - name: Copy rootCA.crt to local machine for validation test with curl/browser
+      fetch:
+        src: /root/rootCA.crt
+        dest: "{{ playbook_dir }}/"
+        mode: 0774
+        flat: yes
